Ensure main section text is not cut off (#47)

--- a/pycascades/static/css/misc/ff.common.css
+++ b/pycascades/static/css/misc/ff.common.css
@@ -29,7 +29,7 @@
 @media (min-width: 750px) {
     .vcontainer:before {
         /* This is just a hack, needs proper fixing!!! */
-        margin-top: 20vh;
+        margin-top: 10vh;
     }
 }
 
